src/components/footer/footer.css
footer {
    background: var(--blue-bg-color);
    position: relative;
    bottom: 0;
    left: 0;
    width: 100%;
    color: white;
    margin-top: 50vh; /* A Retirer quand on aura du contenu sur toutes les pages */
}

footer .container {
    display: flex;
    justify-content: space-around;
    padding: 20px 0;
}

footer nav {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

footer nav a {
    color: white;
    text-decoration: none;
    font-size: 0.95rem;
}

footer nav h3 {
    font-weight: bold;
    margin-bottom: 6px;
}

footer nav a:hover {
    text-decoration: underline;
}

footer p {
    text-align: center;
    padding: 10px;
    font-size: 0.85rem;
}

/* Mobile */
@media (max-width: 412px) {
    footer .container {
        flex-direction: column;
        align-items: center;
        text-align: center;
        gap: 20px;
    }
}

